attach some buttons

--- a/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_screen.xml
@@ -30,6 +30,7 @@
         android:layout_height="69dp"
         android:background="@android:color/holo_blue_dark"
         android:fontFamily="monospace"
+        android:onClick="login"
         android:text="Login"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -47,6 +48,7 @@
         android:layout_height="69dp"
         android:background="@android:color/holo_blue_dark"
         android:fontFamily="monospace"
+        android:onClick="register"
         android:text="Register"
         android:textAlignment="center"
         android:textSize="16sp"
