--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -34,6 +34,7 @@
         android:textSize="16sp"
         android:textStyle="bold"
         android:typeface="monospace"
+        android:onClick="mycalendar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
@@ -48,6 +49,7 @@
         android:textSize="16sp"
         android:textStyle="bold"
         android:typeface="monospace"
+        android:onClick="watchlist"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -64,6 +66,7 @@
         android:textSize="16sp"
         android:textStyle="bold"
         android:typeface="monospace"
+        android:onClick="top50"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -80,6 +83,7 @@
         android:textSize="16sp"
         android:textStyle="bold"
         android:typeface="monospace"
+        android:onClick="map"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
