--- a/app/src/main/res/layout/activity_my_calendar.xml
+++ b/app/src/main/res/layout/activity_my_calendar.xml
@@ -22,21 +22,6 @@
         app:layout_constraintVertical_bias="0.05" />
 
     <Button
-        android:id="@+id/my_calendar_back"
-        style="@android:style/Widget.Button.Inset"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@android:color/holo_blue_dark"
-        android:text="Back"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:typeface="monospace"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.054"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <Button
         android:id="@+id/calendar_add_new"
         style="@android:style/Widget.Button.Inset"
         android:layout_width="wrap_content"
@@ -57,7 +42,7 @@
         android:layout_height="357dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/my_calendar_back"
+        app:layout_constraintBottom_toTopOf="@id/calendar_add_new"
         app:layout_constraintTop_toBottomOf="@+id/my_calendar"
         app:layout_constraintVertical_bias="0.5" />
 </android.support.constraint.ConstraintLayout>
