--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,55 +12,38 @@
     tools:context="baseballRecruitment.jd.Login"
     tools:ignore="NewApi">
 
-    <!-- Login progress -->
-    <ProgressBar
-        android:id="@+id/login_progress"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:visibility="gone" />
-
-    <ScrollView
-        android:id="@+id/login_form"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <android.support.constraint.ConstraintLayout
-            android:id="@+id/email_login_form"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-
             <AutoCompleteTextView
                 android:id="@+id/email"
-                android:layout_width="336dp"
-                android:layout_height="38dp"
+                android:ems="10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:hint="@string/prompt_email"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
                 android:singleLine="true"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/password"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_chainStyle="packed"
                 tools:layout_editor_absoluteX="8dp"
-                tools:layout_editor_absoluteY="16dp"
-                tools:ignore="MissingConstraints" />
-
+                tools:layout_editor_absoluteY="16dp" />
 
             <EditText
                 android:id="@+id/password"
-                android:layout_width="336dp"
+                android:ems="10"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:hint="@string/prompt_password"
-                android:imeActionId="@+id/login"
-                android:imeActionLabel="@string/action_sign_in_short"
-                android:imeOptions="actionUnspecified"
                 android:inputType="textPassword"
                 android:maxLines="1"
                 android:singleLine="true"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/email"
                 tools:layout_editor_absoluteY="70dp"
-                tools:layout_editor_absoluteX="8dp"
-                tools:ignore="MissingConstraints" />
-
+                tools:layout_editor_absoluteX="8dp" />
 
             <Button
                 android:id="@+id/email_sign_in_button"
@@ -73,25 +56,12 @@
                 android:textAlignment="center"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                android:onClick="login"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/password"
                 tools:layout_editor_absoluteX="192dp"
-                tools:layout_editor_absoluteY="132dp"
-                tools:ignore="MissingConstraints" />
-
-            <Button
-                android:id="@+id/sign_in_cancel_button"
-                style="@android:style/Widget.Button.Inset"
-                android:layout_width="124dp"
-                android:layout_height="50dp"
-                android:background="@android:color/holo_blue_dark"
-                android:fontFamily="monospace"
-                android:text="Cancel"
-                android:textAlignment="center"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                tools:layout_editor_absoluteX="30dp"
-                tools:layout_editor_absoluteY="132dp"
-                tools:ignore="MissingConstraints" />
+                tools:layout_editor_absoluteY="132dp" />
 
         </android.support.constraint.ConstraintLayout>
-    </ScrollView>
-</LinearLayout>
