--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -19,85 +19,97 @@
         tools:layout_editor_absoluteY="16dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/name_response"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintHorizontal_bias="0.468" />
 
     <EditText
         android:id="@+id/name_response"
-        android:layout_width="215dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:hint="Name"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/email_response"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="57dp" />
 
     <EditText
         android:id="@+id/email_response"
-        android:layout_width="215dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
         android:ems="10"
         android:inputType="textEmailAddress"
-        android:text="Email"
+        android:hint="Email"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/password_response"
+        app:layout_constraintTop_toBottomOf="@+id/name_response"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="196dp" />
 
     <EditText
         android:id="@+id/password_response"
-        android:layout_width="215dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Password"
+        android:hint="Password"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/confirm_password"
+        app:layout_constraintTop_toBottomOf="@+id/email_response"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="239dp" />
 
     <EditText
         android:id="@+id/confirm_password"
-        android:layout_width="215dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Confirm Password"
+        android:hint="Confirm Password"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/org_response"
+        app:layout_constraintTop_toBottomOf="@+id/password_response"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="282dp" />
 
     <EditText
         android:id="@+id/org_response"
-        android:layout_width="215dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Organization"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="110dp" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/username_response"
+        app:layout_constraintTop_toBottomOf="@+id/confirm_password"
+        android:hint="Organization"
+        tools:layout_editor_absoluteX="16dp"/>
 
     <EditText
         android:id="@+id/username_response"
-        android:layout_width="215dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Username"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/org_response"
+        android:hint="Username"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="153dp" />
 
     <Button
-        android:id="@+id/register_cancel_button"
-        style="@android:style/Widget.Button.Inset"
-        android:layout_width="88dp"
-        android:layout_height="48dp"
-        android:background="@android:color/holo_blue_dark"
-        android:text="Cancel"
-        android:textAlignment="center"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:typeface="monospace"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="352dp" />
-
-    <Button
         android:id="@+id/register_enter_button"
-        style="@android:style/Widget.Button.Inset"
         android:layout_width="88dp"
         android:layout_height="48dp"
         android:background="@android:color/holo_blue_dark"
@@ -106,6 +118,11 @@
         android:textSize="16sp"
         android:textStyle="bold"
         android:typeface="monospace"
+        android:onClick="register"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/username_response"
         tools:layout_editor_absoluteX="146dp"
         tools:layout_editor_absoluteY="352dp" />
 
