--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="baseballRecruitment.jd.RegistrationActivity">
+    tools:context="baseballRecruitment.jd.Registration">
 
     <TextView
         android:id="@+id/register_title"
