--- a/app/src/main/res/layout/activity_watchlist.xml
+++ b/app/src/main/res/layout/activity_watchlist.xml
@@ -54,6 +54,7 @@
         android:textSize="16sp"
         android:textStyle="bold"
         android:typeface="monospace"
+        android:onClick="newplayer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.916"
         app:layout_constraintLeft_toLeftOf="parent"
