--- a/app/src/main/res/layout/activity_my_calendar.xml
+++ b/app/src/main/res/layout/activity_my_calendar.xml
@@ -6,21 +6,6 @@
     android:layout_height="match_parent"
     tools:context="baseballRecruitment.jd.MyCalendar">
 
-    <TextView
-        android:id="@+id/my_calendar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="My Calendar"
-        android:textColor="@android:color/holo_blue_dark"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:typeface="monospace"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.05" />
-
     <Button
         android:id="@+id/calendar_add_new"
         style="@android:style/Widget.Button.Inset"
@@ -31,18 +16,19 @@
         android:textSize="16sp"
         android:textStyle="bold"
         android:typeface="monospace"
+        android:onClick="new_meeting"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.945"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <DatePicker
-        android:id="@+id/datePicker"
-        android:layout_width="302dp"
-        android:layout_height="357dp"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calendarView" />
+
+    <CalendarView
+        android:id="@+id/calendarView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/calendar_add_new"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/calendar_add_new"
-        app:layout_constraintTop_toBottomOf="@+id/my_calendar"
-        app:layout_constraintVertical_bias="0.5" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"/>
 </android.support.constraint.ConstraintLayout>
