--- a/app/src/main/res/layout/activity_top50.xml
+++ b/app/src/main/res/layout/activity_top50.xml
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.147" />
 
-    <ListView
+    <ExpandableListView
         android:id="@+id/top_50_list"
         android:layout_width="373dp"
         android:layout_height="331dp"
