--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
     tools:context="baseballRecruitment.jd.Login"
     tools:ignore="NewApi">
 
-            <AutoCompleteTextView
+            <EditText
                 android:id="@+id/email"
                 android:ems="10"
                 android:layout_width="wrap_content"
