--- a/Android/app/src/main/res/layout/activity_top50.xml
+++ b/Android/app/src/main/res/layout/activity_top50.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="baseballRecruitment.jd.Top50">
+    tools:context="baseballRecruitment.jd.Top50_">
 
     <TextView
         android:id="@+id/top_50_title"
