--- a/Android/app/src/main/res/layout/activity_search.xml
+++ b/Android/app/src/main/res/layout/activity_search.xml
@@ -4,15 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="baseballRecruitment.jd.SearchActivity">
+    tools:context="baseballRecruitment.jd.SearchActivity_">
 
     <SearchView
         android:id="@+id/searchView"
         android:layout_width="368dp"
         android:layout_height="50dp"
         android:layout_marginTop="124dp"
+        android:iconifiedByDefault="false"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/searchResults" />
 
     <TextView
         android:id="@+id/searchTitle"
@@ -44,4 +46,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.868" />
+
+    <ListView
+        android:id="@+id/searchResults"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constrainedHeight="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchView"
+    />
 </android.support.constraint.ConstraintLayout>
