--- a/Android/app/src/main/res/layout/activity_watchlist.xml
+++ b/Android/app/src/main/res/layout/activity_watchlist.xml
@@ -16,7 +16,9 @@
         android:textSize="16sp"
         android:textStyle="bold"
         android:typeface="monospace"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="2dp"
+        app:layout_constraintBottom_toTopOf="@+id/watchlist_filter"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.056"
         app:layout_constraintRight_toRightOf="parent"
@@ -27,7 +29,7 @@
         android:layout_width="368dp"
         android:layout_height="wrap_content"
         android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/watchlist"
         app:layout_constraintTop_toBottomOf="@+id/watchlist_title"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -36,13 +38,11 @@
     <ExpandableListView
         android:id="@+id/watchlist"
         android:layout_width="363dp"
-        android:layout_height="310dp"
+        android:layout_height="0dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/watchlist_filter"
-        app:layout_constraintVertical_bias="0.157"
-        app:layout_constraintHorizontal_bias="0.533" />
+        app:layout_constraintBottom_toTopOf="@+id/watchlist_add_new"
+        app:layout_constraintTop_toBottomOf="@+id/watchlist_filter" />
 
     <Button
         android:id="@+id/watchlist_add_new"
@@ -55,11 +55,12 @@
         android:textStyle="bold"
         android:typeface="monospace"
         android:onClick="newplayer"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.916"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/watchlist"
-        app:layout_constraintVertical_bias="0.619" />
+        app:layout_constraintTop_toBottomOf="@+id/watchlist" />
 
 </android.support.constraint.ConstraintLayout>
